--- a/src/app/action-bar/action-bar.component.css
+++ b/src/app/action-bar/action-bar.component.css
@@ -1,10 +1,7 @@
-
 /* Ensure the toolbar takes full width */
 mat-toolbar {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: aquamarine;
+    background-color: rgb(12, 12, 248);
   }
   
   .spacer {
@@ -12,6 +9,5 @@ mat-toolbar {
   }
   
   mat-form-field {
-    margin-right: 16px; /* Adjust margin as needed */
+    margin-right: 16px; 
   }
-  
