--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<router-outlet></router-outlet>
+@if (errorPage === 'Error') {
+    <app-error></app-error>
+}
+@else if (errorPage === 'No Error')  {
+    <router-outlet></router-outlet>
+}
+
 
 
